# oai5g

./: CMakeLists.txt
ci-scripts/: Jenkinsfile-cluster  ci_ueinfra.yaml  cls_cluster.py  cls_containerize.py  cls_oaicitest.py  main.py  ran.py  xml_class_list.yml
ci-scripts/conf_files/: gNB_SA_CU.conf  gNB_SA_DU.conf  gNB_SA_n78_106PRB.2x2_usrpn310.conf  gNB_SA_n78_133PRB.2x2_usrpn310.conf  gnb.band78.sa.fr1.106PRB.2x2.usrpn310.asue.conf  gnb.band78.sa.fr1.106PRB.2x2.usrpn310.conf  gnb.band78.sa.fr1.106PRB.ddsuu.2x2.usrpn310.conf  gnb.band78.sa.fr1.106PRB.usrpn310.conf  gnb.band78.sa.fr1.162PRB.2x2.usrpn310.conf  gnb.sa.band66.fr1.106PRB.usrpn300.conf  gnb.sa.band78.fr1.106PRB.usrpb210.conf  gnb.sa.band78.fr1.51PRB.usrpb210.conf
ci-scripts/xml_files/: container_5g_f1_rfsim.xml  container_5g_fdd_rfsim.xml  container_5g_rfsim.xml  container_sa_b200_quectel.xml  container_sa_b200_terminate.xml  container_sa_f1_b200_quectel.xml  fr1_sa_quectel.xml  fr1_sa_quectel_162prb.xml  fr1_sa_quectel_stages.xml  lte_2x2_tm2_quectel.xml
cmake_targets/: CMakeLists.txt  build_oai
cmake_targets/autotests/: test_case_list.xml
doc/: BUILD.md  FEATURE_SET.md  RUNMODEM.md
doc/tutorial_resources/: docker-compose-basic-nrf.yaml
docker/scripts/: enb_parameters.yaml  gnb_entrypoint.sh
executables/: main-ocp.c  nr-gnb.c  nr-ru.c  nr-softmodem-common.h  nr-softmodem.c  nr-softmodem.h  nr-ue.c  nr-uesoftmodem.c  nr-uesoftmodem.h  ocp-gnb.c  softmodem-common.c  softmodem-common.h
nfapi/oai_integration/: nfapi.c  nfapi_pnf.c  nfapi_vnf.c  vendor_ext.h
openair2/: CMakeLists.txt
openair2/F1AP/: CMakeLists.txt  dummy_enb.c  f1ap_cu_interface_management.c  f1ap_cu_paging.c  f1ap_cu_rrc_message_transfer.c  f1ap_cu_task.c  f1ap_decoder.c  f1ap_du_interface_management.c  f1ap_du_paging.c  f1ap_du_rrc_message_transfer.c  f1ap_du_rrc_message_transfer.h
openair2/F1AP/MESSAGES/ASN1/: CMakeLists.txt
openair2/F1AP/MESSAGES/ASN1/R15.1.1/: f1ap-15.1.1.asn1  f1ap-15.1.1.cmake
openair2/F1AP/MESSAGES/ASN1/R15.2.1/: f1ap-15.2.1.asn1  f1ap-15.2.1.cmake
openair2/F1AP/MESSAGES/ASN1/R16.3.1/: f1ap-16.3.1.asn1  f1ap-16.3.1.cmake
openshift/: README.md
(+140 files in other folders)
